<resources>
    <string name="app_name">example_QR_code</string>
    <string name="start">START</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="result">Result</string>
    <string name="scan">Scan</string>
    <string name="History">History</string>
    <string name="Favorite">Favorite</string>
    <string name="My_qr">My QR</string>
    <string name="Setting">Setting</string>
    <string name="Share">Share</string>
    <string name="Create">Create QR</string>
    <string name="lienKet">Liên kết web</string>
    <string name="link">http://www.qrcode.com</string>
    <string name="qr_code">QR code</string>
    <string name="document">Document</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone</string>
    <string name="wifi">Wifi</string>
    <string name="web_link">Web link</string>
    <string name="http">http://</string>
    <string name="name">Full name</string>
    <string name="workplace">Workplace</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="note">Note</string>
    <string name="topic">Topic</string>
    <string name="content">Content</string>
    <string name="message">Message</string>
    <string name="name_wf">SSID/Network name</string>
    <string name="password">Password</string>
    <string name="wep">WEP</string>
    <string name="hint">Hint</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="newQR">Create new</string>
    <string name="Wep">WEP</string>
    <string name="wpa">WPA</string>
    <string name="open">OPEN</string>
    <string name="un_know">UNKNOWN</string>
    <string name="geography">Geography</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="query">Query</string>
    <string name="empty">Empty</string>
    <string name="rename">Rename</string>
    <string name="txt_content_share">Share your contact information via QR</string>

    <string name="txt_content_sharedata">Just enter the data you want to share. When done,click ✓.So next time you open My QR, your contact QR will be displayed</string>
    <string name="txt_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_custom_scan_barcodes">CustomScanBarcodes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>