<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        tools:ignore="ContentDescription">

        <View
            android:layout_width="@dimen/dimens_300"
            android:layout_height="721dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10"
            android:text="@string/rename"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:id="@+id/edt_feedback"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:alpha="0.5"
            android:background="@drawable/bg_edittext_feedback"
            android:gravity="center"
            android:hint="@string/contact"
            android:inputType="textMultiLine"
            android:padding="@dimen/dimens_5"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimens_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginEnd="@dimen/dimens_30"
            android:background="@drawable/ripple_effect_scan"
            android:gravity="center"
            android:padding="@dimen/dimens_10"
            android:text="@string/txt_cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_feedback" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginEnd="@dimen/dimens_30"
            android:layout_marginBottom="@dimen/dimens_10"
            android:background="@drawable/ripple_effect_scan"
            android:gravity="center"
            android:paddingStart="@dimen/dimens_10"
            android:paddingTop="@dimen/dimens_5"
            android:paddingEnd="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>